# process-compose-desktop

./: .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml
sample/: hello-world.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: configuration-view.svelte  navbar.svelte  process-compose.service.ts  process-logs.svelte  process-table.svelte  process-view.svelte  process.ts  project-actions.svelte  project-menu.svelte  project-setup.svelte  project-tabs.svelte  project-view.svelte  statusbar.svelte
src/lib/stores/: process.svelte.ts  process.ts  project-observer.svelte.ts  project-observer.ts  project.svelte.ts  project.ts
src/lib/utils/: format.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/new/: +page.svelte
src/routes/projects/[slug]/: +page.svelte  +page.ts
