[package]
name = "process-compose-desktop"
version = "0.1.0"
description = "Desktop application for process-compose"
authors = ["Lukas Schmitt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "process_compose_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-http = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-websocket = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-persisted-scope = "2.0.1"
tauri-plugin-store = "2.0.1"

